// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`High-level Component render before actual DOM SearchBox Input box basic render 1`] = `
<div>
  <div
    class="search-input"
  >
    <input
      aria-errormessage="search-error-msg"
      aria-invalid="false"
      aria-label="Input price to search among orders"
      type="text"
      value="3"
    />
    <button
      aria-label="clear search"
      class="search-clear"
      type="button"
    >
      X
    </button>
  </div>
</div>
`;

exports[`High-level Component render before actual DOM SearchBox basic render 1`] = `
<div>
  <section
    class="search-container"
  >
    <div
      class="search-input"
    >
      <input
        aria-errormessage="search-error-msg"
        aria-invalid="false"
        aria-label="Input price to search among orders"
        type="text"
        value=""
      />
    </div>
  </section>
</div>
`;
